--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -21,7 +21,7 @@
   height: 100%;
   flex-direction: row;
 
-  padding: 6rem 2rem 0rem;
+  padding: 6rem 2rem 0;
 
   @media screen and (min-width: 2000px) {
     padding-top: 8rem;
@@ -48,7 +48,7 @@
 
   @media screen and (max-width: 1200px) {
     width: 100%;
-    margin-right: 0rem;
+    margin-right: 0;
   }
 }
 
@@ -67,7 +67,7 @@
     flex-direction: row;
     width: auto;
 
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   }
 
   .tag-cmp {
@@ -110,7 +110,7 @@
     border-radius: 50%;
 
     background: var(--white-color);
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 
     img {
       width: 60%;
