--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -26,8 +26,8 @@
     border-radius: 15px;
     object-fit: cover;
   }
-  
-  @media screen and (max-width: 2000px) {
+
+  @media screen and (min-width: 2000px) {
     width: 370px;
     margin: 2rem 4rem;
 
